--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,8 +8,9 @@
 
 <body>
     <div class="container">
-        <form action="/getRate" method="post">
-            <input type="text" name="wieght">
+        <form action="/getRate" method="get">
+		    <label for="weight">Weight of item to be shipped in oz </label>
+            <input type="number" step="0.01" id="weight" name="weight">			
             <select name="postType">
                 <option value="stamped">Letters (stamped)</option>
                 <option value="metered">Letters (metered)</option>
