--- a/views/pages/getRate.ejs
+++ b/views/pages/getRate.ejs
@@ -6,8 +6,8 @@
   <title>Postal Rate</title>
 </head>
 <body>
-  <h1>The Postage Rates</h1>
+  <h1>Current Postage Rates</h1>
   
-  <p>The current rate for your <%= postType %>  with a weight of <%= weight %>  is <%= rate %></p>
+  <p>The current rate for your <%= t %>  with a weight of <%= weight %>oz is $<%= rate %>.</p>
 </body>
 </html>
