--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -8,6 +8,7 @@
 
 <body>
     <div class="container">
+	<h1> Get the Rate for Your Postal Service</h1>
         <form action="/getRate" method="get">
 		    <label for="weight">Weight of item to be shipped in oz </label>
             <input type="number" step="0.01" id="weight" name="weight">			
