--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,7 +16,7 @@
                 <option value="stamped">Letters (stamped)</option>
                 <option value="metered">Letters (metered)</option>
                 <option value="flats">Large Envelopes (flats)</option>
-                <option value="package">First-Class Package Service—Retail</option>
+                <option value="package">First-Class Package Service Retail</option>
             </select>
             <input type="submit" name="submit" value="Submit">
             
